testdata/features/inspections/unusedDeclaration/Empty.elm
<error descr="declarations expected"> </error>